# unary_rpc_service

./: LICENSE  README.md
certs_generator/: README.md  clean_ca_certs.sh  clean_client_certs.sh  clean_server_certs.sh  generate_ca_certs.sh  generate_client_certs.sh  generate_server_certs.sh
certs_generator/configs/: ca_openssl.conf  client_san.conf  server_san.conf
certs_generator/generated_ca_certs/: ca.key  ca.pem
certs_generator/generated_client_certs/: client.crt  client.csr  client.key
certs_generator/generated_server_certs/: server.crt  server.csr  server.key
client/: CMakeLists.txt  README.md
client/scripts/: run.sh
client/src/: client.cc
client/src/protos/: unary_rpc_service.proto
server/: CMakeLists.txt  README.md
server/scripts/: build.sh  clean.sh  run.sh
server/src/: server.cc
server/src/helper/: helper.cc  helper.h
